change color variables on global css

--- a/src/pages/category/styles.module.scss
+++ b/src/pages/category/styles.module.scss
@@ -31,7 +31,7 @@
 .buttonAdd{
     height: 40px;
     border: 0;
-    background-color: var(--green-900);
+    background-color: var(--red-900);
     border-radius: 0.3rem;
     font-weight: bold;
     font-size: 1.2rem;
