--- a/src/pages/dashboard/styles.module.scss
+++ b/src/pages/dashboard/styles.module.scss
@@ -50,7 +50,7 @@
 
 .tag {
     width: 9px;
-    background-color: var(--green-900);
+    background-color: var(--red-900);
     height: 60px;
     border-radius: 0.3rem 0 0 0.3rem;
 
