--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -18,7 +18,7 @@
   padding: 2rem 1.5rem;
 
   h1{
-    color: var(--white);
+    color: var(--black);
     padding-bottom: 1rem;
   }
 
@@ -37,7 +37,7 @@
 
 .text{
   margin-top: 1rem;
-  color: var(--white);
+  color: var(--black);
   cursor: pointer;
 }
 
