--- a/src/components/ui/Input/styles.module.scss
+++ b/src/components/ui/Input/styles.module.scss
@@ -2,8 +2,8 @@
     margin-bottom: 1rem;
     height: 40px;
     border-radius: 0.5rem;
-    background-color: var(--dark-900);
-    color: var(--white);
+    background-color: var(--light-900);
+    color: var(--black);
     padding: 1rem;
     border: 1px solid var(--gray-100)
 }
