--- a/src/pages/category/styles.module.scss
+++ b/src/pages/category/styles.module.scss
@@ -9,7 +9,7 @@
 }
 
 .container h1 {
-    color: var(--white);
+    color: var(--black);
 }
 
 .form {
@@ -19,11 +19,11 @@
 }
 
 .input {
-    background-color: var(--dark-900);
+    background-color: var(--light-900);
     padding: 1rem;
     height: 40px;
     border-radius: 0.3rem;
-    color: var(--white);
+    color: var(--black);
     border: 1px solid var(--gray-100);
     margin-bottom: 1rem;
 }
@@ -31,9 +31,9 @@
 .buttonAdd{
     height: 40px;
     border: 0;
-    background-color: var(--red-900);
+    background-color: var(--orange-900);
     border-radius: 0.3rem;
     font-weight: bold;
     font-size: 1.2rem;
-    color: var(--dark-700);
+    color: var(--light-700);
 }
