--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,20 +6,18 @@
 }
 
 :root {
-  // --white: #fff;
-  --white: rgb(0, 0, 0);
-  // --black: #000;
-  --black: rgb(255, 255, 255);
-  // --dark-900: #101026;
-  // --dark-700: #1d1d2e;
-  --dark-900: #e8e8e8;
-  --dark-700: #f6f6f6;
+  --black: rgb(0, 0, 0);
+  --white: rgb(255, 255, 255);
+  --dark-900: #101026;
+  --dark-700: #1d1d2e;
+  --light-900: #e8e8e8;
+  --light-700: #f6f6f6;
   // --gray-100: #8a8a8a;
   --gray-100: #adadad;
 
   --green-900: #3fffa3;
   // --red-900: #ff3f4b;
-  --red-900: #c3c750;
+  --orange-900: #c3c750;
 }
 
 button {
@@ -32,7 +30,7 @@ a{
 }
 
 body {
-  background: var(--dark-700);
+  background: var(--light-700);
 }
 
 body,input,textarea,select,button {
